--- a/src/styles/_sales.css
+++ b/src/styles/_sales.css
@@ -148,16 +148,16 @@
             .sales__preview {
                 /*flex-shrink: 0;*/
                 width: auto;
-                margin-left: 0;
-                margin-right: 0;
+                margin-left: 6px;
+                margin-right: 6px;
                 margin-top: 50px;
-                padding-right: 16.5%;
             }
-                .sales__illustration {
-                    /*position: relative;*/
-                    /*vertical-align: top;*/
-                    /*pointer-events: none;*/
-                    width: 100%;
-                    height: auto;
+                .sales__media {
+                    margin: 0;
                 }
+                    .sales__illustration {
+                        /*position: relative;*/
+                        /*vertical-align: top;*/
+                        /*pointer-events: none;*/
+                    }
 }
