--- a/src/styles/_start.css
+++ b/src/styles/_start.css
@@ -1,7 +1,7 @@
 .start {
     padding-top: 192px;
     padding-bottom: 100px;
-    background-image: url("../vectors/start-background.svg.svg");
+    background-image: url("../vectors/start-background.svg");
     background-size: 1889px 577px;
     background-repeat: no-repeat;
     background-position: center center;
