--- a/src/styles/_hero.css
+++ b/src/styles/_hero.css
@@ -1,14 +1,8 @@
 .hero {
-    position: relative;
+
 }
     .hero__head {
-        position: absolute;
-        left: 0;
-        top: 0;
-        right: 0;
-        z-index: 100; /* выше .hero__summary */
-        min-height: 360px; /* фон */
-        padding-top: 60px;
+        padding-top: 100px;
         text-align: center;
         background-image: url("../vectors/hero-desktop-head.svg");
         background-size: 1920px 360px;
@@ -26,7 +20,7 @@
             }
 
             .hero__heading {
-                margin-top: 5px;
+                margin-top: 25px;
                 margin-bottom: 0;
                 font-family: var(--evolventa);
                 font-weight: bold;
@@ -36,16 +30,16 @@
 
             .hero__description {
                 max-width: 826px;
-                margin-top: 26px;
+                margin-top: 11px;
                 margin-left: auto;
                 margin-right: auto;
                 font-weight: 500;
                 font-size: 20px;
-                line-height: 34px;
+                line-height: 30px;
             }
 
             .hero__submit {
-                margin-top: 51px;
+                margin-top: 74px;
             }
 
 
@@ -74,65 +68,21 @@
         );
     }
 
-    /* картинка у нас мас 1864px */
+    /* картинка у нас маx 1864px */
     @media (min-width: 1864px) {
         .hero__summary {
             background-size: 100% auto;
         }
     }
-        .hero__summary-wrap {
-
-        }
-            .hero__panel {
-                display: flex;
-                align-items: flex-start;
-                gap: 40px;
-                padding: 32px 48px;
-                border-radius: 18px;
-                background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.71));
-                box-shadow: 0 12px 24px rgba(20, 20, 43, 0.04), 0 -2px 4px rgba(20, 20, 43, 0.02), 0 22px 24px rgba(74, 58, 255, 0.03);
-            }
-
-            /* Чуть чуть увеличиваем когда появляется возможность */
-            @media (min-width: 1300px) {
-                .hero__panel {
-                    margin-left: calc(-1 * var(--container-padding));
-                    margin-right: calc(-1 * var(--container-padding));
-                    gap: 67px;
-                }
-            }
-                .hero__column {
-                    flex-grow: 1;
-                    flex-basis: 0;
-                }
-
-                .hero__column:nth-child(2) {
-                    flex-grow: 1.06;
-                }
-                    .hero__sub-heading {
-                        margin-top: 0;
-                        margin-bottom: 0;
-                        font-family: var(--evolventa);
-                        font-weight: bold;
-                        font-size: 24px;
-                        line-height: 32px;
-                    }
-
-                    .hero__features-list {
-                        margin-top: 24px;
-                        margin-bottom: 0;
-                    }
 
 
 
 @media (max-width: 599px) {
 
     .hero {
-        /*position: relative;*/
         overflow: hidden; /* to cut button shadow inside */
     }
         .hero__head {
-            position: static;
             min-height: 220px; /* фон */
             padding-top: 30px;
             /*text-align: center;*/
@@ -212,46 +162,12 @@
         }
 
 
-        /* картинка у нас мас 586px */
+        /* картинка у нас маx 586px */
         @media (min-width: 586px) {
             .hero__summary {
                 background-size: 100% auto;
             }
         }
-            .hero__summary-wrap {
 
-            }
-                .hero__panel {
-                    display: block;
-                    /*align-items: flex-start;*/
-                    /*gap: 40px;*/
-                    /*padding: 32px 48px;*/
-                    padding: 24px var(--container-padding);
-                    /*border-radius: 18px;*/
-                    /*background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.71));*/
-                    /*box-shadow: 0 12px 24px rgba(20, 20, 43, 0.04), 0 -2px 4px rgba(20, 20, 43, 0.02), 0 22px 24px rgba(74, 58, 255, 0.03);*/
-                }
-                    .hero__column {
-                        margin-top: 58px;
-                        /*flex-grow: 1;*/
-                        /*flex-basis: 0;*/
-                    }
-
-                    .hero__column:first-child {
-                        margin-top: 0;
-                    }
-                        .hero__sub-heading {
-                            /*margin-top: 0;*/
-                            /*margin-bottom: 0;*/
-                            /*font-family: var(--font-headings);*/
-                            /*font-weight: bold;*/
-                            font-size: 20px;
-                            line-height: 27px;
-                        }
-
-                        .hero__features-list {
-                            /*margin-top: 24px;*/
-                            /*margin-bottom: 0;*/
-                        }
 }
 
