truth draft and badges removal

--- a/src/styles/_feature.css
+++ b/src/styles/_feature.css
@@ -4,20 +4,27 @@
     vertical-align: top;
     border: 1px solid currentColor;
     border-radius: 22px;
-    padding: 8px 23px;
+    padding: 6px 23px;
     font-family: var(--evolventa);
     font-weight: bold;
     font-size: 20px;
-    line-height: 26px;
+    line-height: 30px;
     color: var(--accent);
     white-space: nowrap;
 }
     .feature__tag {
-        margin-left: 16px;
-    }
-
-    .feature__tag + .feature__tag {
-        margin-left: 10px;
+        margin-left: 8px;
+        display: inline-block;
+        vertical-align: top;
+        padding: 4px 12px 3px;
+        background-color: var(--accent);
+        border-radius: 15px;
+        font-family: var(--evolventa);
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 23px;
+        color: #FFFFFF;
+        white-space: nowrap;
     }
 
     .feature__tag:last-child {
@@ -75,42 +82,24 @@
 @media (max-width: 599px) {
 
     .feature {
-        /*position: relative;*/
-        /*display: inline-flex;*/
-        /*vertical-align: top;*/
-        /*border: 1px solid currentColor;*/
-        /*border-radius: 22px;*/
-        padding: 3px 15px;
-        /*font-family: var(--font-headings);*/
-        /*font-weight: bold;*/
+        padding: 2px 15px;
         font-size: 16px;
-        line-height: 22px;
-        /*color: var(--action);*/
-        /*white-space: nowrap;*/
+        line-height: 26px;
     }
         .feature__tag {
-            margin-left: 12px;
-        }
-
-        .feature__tag + .feature__tag {
-            margin-left: 8px;
+            font-size: 12px;
+            line-height: 19px;
+            padding: 4px 10px 3px;
         }
 
         .feature__tag:last-child {
-            margin-right: -12px;
+            margin-right: -13px;
         }
 
         .feature__sparkles {
             width: 22px;
             height: 22px;
             margin-left: 8px;
-            /*text-indent: 200%;*/
-            /*white-space: nowrap;*/
-            /*overflow: hidden;*/
-            /*background-image: url("../images/feature-sparkles.svg");*/
-            /*background-size: contain;*/
-            /*background-repeat: no-repeat;*/
-            /*background-position: center center;*/
         }
 
 
