--- a/src/styles/_truth.css
+++ b/src/styles/_truth.css
@@ -13,7 +13,7 @@
     }
 
     .truth__description {
-        margin-top: 10px;
+        margin-top: 13px;
         max-width: 740px;
         margin-left: auto;
         margin-right: auto;
@@ -35,7 +35,7 @@
         }
 
     .truth__preview {
-
+        margin-top: 50px;
     }
         .truth__illustration {
             vertical-align: top;
@@ -52,9 +52,7 @@
         overflow: hidden; /* обрезаем картинку */
     }
         .truth__heading {
-            /*margin-top: 0;*/
-            /*margin-bottom: 0;*/
-            /*text-align: center;*/
+
         }
 
         .truth__description {
@@ -62,12 +60,10 @@
             font-weight: inherit;
             font-size: 16px;
             line-height: 23px;
-            /*text-align: center;*/
         }
 
         .truth__content {
             margin-top: 26px;
-            /*flex-grow: 1;*/
             max-width: 360px;
             margin-left: auto;
             margin-right: auto;
@@ -77,6 +73,7 @@
                 margin-right: calc(-1 * var(--container-padding));
                 padding-left: var(--container-padding);
                 padding-right: var(--container-padding);
+                padding-bottom: 80px;
                 overflow-x: auto;
                 gap: 8px;
             }
