--- a/src/styles/_truth.css
+++ b/src/styles/_truth.css
@@ -1,15 +1,18 @@
 .truth {
-    margin-top: -800px;
+    margin-top: -868px;
     padding-bottom: 52px;
 }
     .truth__heading {
         margin-top: 0;
         margin-bottom: 0;
-        font-family: var(--evolventa);
-        font-weight: bold;
-        font-size: 48px;
-        line-height: 53px;
         text-align: center;
+    }
+
+    @media (min-width: 600px) {
+        .truth__heading.title,
+        .truth__heading .title {
+            line-height: 53px;
+        }
     }
 
     .truth__description {
@@ -47,7 +50,6 @@
 
     .truth {
         margin-top: 0;
-        padding-top: 67px;
         padding-bottom: 63px;
         overflow: hidden; /* обрезаем картинку */
     }
@@ -56,14 +58,14 @@
         }
 
         .truth__description {
-            margin-top: 12px;
+            margin-top: 14px;
             font-weight: inherit;
             font-size: 16px;
             line-height: 23px;
         }
 
         .truth__content {
-            margin-top: 26px;
+            margin-top: 20px;
             max-width: 360px;
             margin-left: auto;
             margin-right: auto;
