--- a/src/styles/_truth.css
+++ b/src/styles/_truth.css
@@ -39,6 +39,7 @@
 
     .truth__preview {
         margin-top: 50px;
+        text-align: center;
     }
         .truth__illustration {
             vertical-align: top;
@@ -75,7 +76,7 @@
                 margin-right: calc(-1 * var(--container-padding));
                 padding-left: var(--container-padding);
                 padding-right: var(--container-padding);
-                padding-bottom: 80px;
+                padding-bottom: 40px;
                 overflow-x: auto;
                 gap: 8px;
             }
@@ -83,9 +84,11 @@
         .truth__preview {
             margin-left: calc(-1 * var(--container-padding));
             margin-right: calc(-1 * var(--container-padding));
+            padding-left: 5px;
+            padding-right: 5px;
         }
             .truth__illustration {
-                width: calc(100% + 14px); /* хотим чтобы картинка уходила вправо на 14px, за экран */
+                width: 100%;
                 height: auto;
             }
 }
