--- a/src/styles/_hero.css
+++ b/src/styles/_hero.css
@@ -1,34 +1,48 @@
 .hero {
-    min-height: 1800px; /* could be 1448px same as background height, but since it can be stretched in 1920px we need more spacing at the bottom */
-    background-image: url("../images/hero-desktop-summary.jpg");
-    background-size: 1864px 1321px;
-    background-repeat: no-repeat;
-    background-position: center top;
+    position: relative;
 }
-
-@media (min-resolution: 2dppx) {
-    .hero {
-        background-image: url("../images/hero-desktop-summary@2x.jpg");
+    .hero::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 84px;
+        right: 0;
+        display: block;
+        height: 1500px; /* could be 1321px same as background height, but since it can be stretched in 1920px we need more spacing at the bottom */
+        background-image: url("../images/hero-desktop-summary.jpg");
+        background-size: 1864px 1231px;
+        background-repeat: no-repeat;
+        background-position: center center;
     }
-}
 
-/*.hero {*/
-/*    background-image: image-set(*/
-/*        url("../images/hero-desktop-summary@2x.avif") type("image/avif") 2x,*/
-/*        url("../images/hero-desktop-summary.avif") type("image/avif") 1x,*/
-/*        url("../images/hero-desktop-summary@2x.webp") type("image/webp") 2x,*/
-/*        url("../images/hero-desktop-summary.webp") type("image/webp") 1x*/
-/*    );*/
-/*}*/
-
-/* картинка у нас маx 1864px по ширине */
-@media (min-width: 1864px) {
-    .hero {
-        background-size: 100% auto;
+    @media (min-resolution: 2dppx) {
+        .hero::before {
+            background-image: url("../images/hero-desktop-summary@2x.jpg");
+        }
     }
-}
+
+    /*.hero::before {*/
+    /*    background-image: image-set(*/
+    /*        url("../images/hero-desktop-summary@2x.avif") type("image/avif") 2x,*/
+    /*        url("../images/hero-desktop-summary.avif") type("image/avif") 1x,*/
+    /*        url("../images/hero-desktop-summary@2x.webp") type("image/webp") 2x,*/
+    /*        url("../images/hero-desktop-summary.webp") type("image/webp") 1x*/
+    /*    );*/
+    /*}*/
+
+
+    /* картинка у нас маx 1864px по ширине */
+    @media (min-width: 1864px) {
+        .hero::before {
+            background-size: 100% auto;
+        }
+    }
+
+
     .hero__head {
+        position: relative;
         padding-top: 100px;
+        padding-bottom: 100px;
         text-align: center;
         background-image: url("../vectors/hero-desktop-head.svg");
         background-size: 1920px 360px;
@@ -36,7 +50,7 @@
         background-position: center top;
     }
         .hero__wrap {
-
+            position: relative;
         }
             .hero__pre-heading {
                 font-family: var(--evolventa);
@@ -74,38 +88,43 @@
 @media (max-width: 599px) {
 
     .hero {
-        min-height: 500px;
-        background-image: url("../images/hero-smartphone-summary.jpg");
-        background-size: 586px 387px;
-        overflow: hidden; /* to cut button shadow inside */
-    }
 
-    @media (min-resolution: 2dppx) {
-        .hero {
-            background-image: url("../images/hero-smartphone-summary@2x.jpg");
+    }
+        .hero::before {
+            top: 403px;
+            height: 420px; /* could be 387px same as background height, but since it can be stretched in 600px we need more spacing at the bottom */
+            background-image: url("../images/hero-smartphone-summary.jpg");
+            background-size: 586px 387px;
         }
-    }
 
-
-    /*.hero {*/
-    /*    background-image: image-set(*/
-    /*            url("../images/hero-smartphone-summary@2x.avif") type("image/avif") 2x,*/
-    /*            url("../images/hero-smartphone-summary.avif") type("image/avif") 1x,*/
-    /*            url("../images/hero-smartphone-summary@2x.webp") type("image/webp") 2x,*/
-    /*            url("../images/hero-smartphone-summary.webp") type("image/webp") 1x*/
-    /*    );*/
-    /*}*/
-
-
-    /* картинка у нас маx 586px */
-    @media (min-width: 586px) {
-        .hero {
-            background-size: 100% auto;
+        @media (min-resolution: 2dppx) {
+            .hero::before {
+                background-image: url("../images/hero-smartphone-summary@2x.jpg");
+            }
         }
-    }
+
+        /*.hero::before {*/
+        /*    background-image: image-set(*/
+        /*            url("../images/hero-smartphone-summary@2x.avif") type("image/avif") 2x,*/
+        /*            url("../images/hero-smartphone-summary.avif") type("image/avif") 1x,*/
+        /*            url("../images/hero-smartphone-summary@2x.webp") type("image/webp") 2x,*/
+        /*            url("../images/hero-smartphone-summary.webp") type("image/webp") 1x*/
+        /*    );*/
+        /*}*/
+
+        /* картинка у нас маx 586px */
+        @media (min-width: 586px) {
+            .hero::before {
+                background-size: 100% auto;
+            }
+        }
+
+
+
         .hero__head {
-            min-height: 220px; /* фон */
-            padding-top: 30px;
+            overflow: hidden; /* to cut button shadow inside */
+            padding-top: 81px;
+            padding-bottom: 80px;
             background-image: url("../vectors/hero-smartphone-head.svg");
             background-size: 618px 220px;
         }
@@ -137,7 +156,7 @@
 
                 .hero__description {
                     /*max-width: 826px;*/
-                    margin-top: 18px;
+                    margin-top: 5px;
                     /*margin-left: auto;*/
                     /*margin-right: auto;*/
                     /*font-weight: 500;*/
@@ -146,7 +165,7 @@
                 }
 
                 .hero__submit {
-                    margin-top: 55px;
+                    margin-top: 62px;
                     width: 100%;
                 }
                     .hero__submit.shadow,
@@ -154,6 +173,5 @@
                     .hero__submit .button {
                         width: 100%;
                     }
-
 }
 
