--- a/src/styles/_hero.css
+++ b/src/styles/_hero.css
@@ -21,14 +21,14 @@
         }
     }
 
-    /*.hero::before {*/
-    /*    background-image: image-set(*/
-    /*        url("../images/hero-desktop-summary@2x.avif") type("image/avif") 2x,*/
-    /*        url("../images/hero-desktop-summary.avif") type("image/avif") 1x,*/
-    /*        url("../images/hero-desktop-summary@2x.webp") type("image/webp") 2x,*/
-    /*        url("../images/hero-desktop-summary.webp") type("image/webp") 1x*/
-    /*    );*/
-    /*}*/
+    .hero::before {
+        background-image: image-set(
+            url("../images/hero-desktop-summary@2x.avif") type("image/avif") 2x,
+            url("../images/hero-desktop-summary.avif") type("image/avif") 1x,
+            url("../images/hero-desktop-summary@2x.webp") type("image/webp") 2x,
+            url("../images/hero-desktop-summary.webp") type("image/webp") 1x
+        );
+    }
 
 
     /* картинка у нас маx 1864px по ширине */
@@ -103,14 +103,14 @@
             }
         }
 
-        /*.hero::before {*/
-        /*    background-image: image-set(*/
-        /*            url("../images/hero-smartphone-summary@2x.avif") type("image/avif") 2x,*/
-        /*            url("../images/hero-smartphone-summary.avif") type("image/avif") 1x,*/
-        /*            url("../images/hero-smartphone-summary@2x.webp") type("image/webp") 2x,*/
-        /*            url("../images/hero-smartphone-summary.webp") type("image/webp") 1x*/
-        /*    );*/
-        /*}*/
+        .hero::before {
+            background-image: image-set(
+                    url("../images/hero-smartphone-summary@2x.avif") type("image/avif") 2x,
+                    url("../images/hero-smartphone-summary.avif") type("image/avif") 1x,
+                    url("../images/hero-smartphone-summary@2x.webp") type("image/webp") 2x,
+                    url("../images/hero-smartphone-summary.webp") type("image/webp") 1x
+            );
+        }
 
         /* картинка у нас маx 586px */
         @media (min-width: 586px) {
