--- a/src/styles/_numbers.css
+++ b/src/styles/_numbers.css
@@ -95,7 +95,7 @@
 @media (max-width: 599px) {
 
     .numbers {
-        /*padding-top: 59px;*/
+        padding-top: 71px;
         /*padding-bottom: 89px;*/
     }
         .numbers__heading {
