--- a/src/styles/_start.css
+++ b/src/styles/_start.css
@@ -1,5 +1,5 @@
 .start {
-    padding-top: 192px;
+    padding-top: 187px;
     padding-bottom: 100px;
     background-image: url("../vectors/start-background.svg");
     background-size: 1889px 577px;
@@ -60,8 +60,8 @@
 
     .start {
         overflow: hidden;
-        /*padding-top: 192px;*/
-        /*padding-bottom: 100px;*/
+        padding-top: 140px;
+        padding-bottom: 50px;
         background-image: url("../vectors/start-background-smartphone.svg");
         background-size: 780px 657px;
         /*background-repeat: no-repeat;*/
