--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -96,5 +96,5 @@
         background-size: 24px 24px;
         background-repeat: no-repeat;
         background-position: center center;
-        animation: button-loading-spin 1s steps(12) infinite;
+        animation: button-loading-spin 0.8s linear infinite;
     }
