--- a/src/styles/_inner-alert.css
+++ b/src/styles/_inner-alert.css
@@ -12,7 +12,7 @@
 }
 
 .inner-alert--danger {
-    background-image: url("../vectors/inner-alert-stop-inverted.svg");
+    background-image: url("../vectors/inner-alert-stop.svg");
 }
     .inner-alert__heading {
         font-family: var(--evolventa);
@@ -50,14 +50,15 @@
     background-image: url("../vectors/inner-alert-check.svg");
 }
 
-.inner-alert--in-modal.inner-alert--danger {
-    background-image: url("../vectors/inner-alert-stop.svg");
-}
+/* Моге бы быть второй вариант: */
+/*.inner-alert--in-modal.inner-alert--danger {*/
+/*    background-image: url("../vectors/inner-alert-stop.svg");*/
+/*}*/
 
 
 
 
-@media (max-width: 599px) {
+@media (max-width: 749px) {
 
     .inner-alert {
         background-size: 60px 60px;
