--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -12,6 +12,7 @@
         background-clip: padding-box; /* reset iOS default shadow */
         border-radius: 15px; /* reset iOS default border-radius */
         font-family: inherit;
+        letter-spacing: inherit;
         font-size: 16px;
         line-height: 24px;
         color: #000000;
