button letter spacing

--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -10,6 +10,7 @@
     font-weight: bold;
     font-size: 24px;
     line-height: 36px;
+    letter-spacing: inherit;
     color: #FFFFFF;
     text-align: center;
     text-decoration: none;
