add new responsive breakpoint for laptops

--- a/src/styles/_catalog.css
+++ b/src/styles/_catalog.css
@@ -34,12 +34,54 @@
                 .catalog__illustration {
                     vertical-align: top;
                     margin-right: -26px;
+                    width: calc(100% + 26px);
+                    height: auto;
                 }
 
             .catalog__description {
                 order: -1;
                 font-weight: 500;
             }
+
+
+@media ( 1100px <= width < 1500px ) {
+
+    .catalog {
+        padding-top: 42px;
+        padding-bottom: 71px;
+        /*background-color: var(--accent);*/
+        /*color: #FFFFFF;*/
+    }
+        .catalog__wrap {
+
+        }
+            .catalog__heading {
+                /*margin-top: 0;*/
+                /*margin-bottom: 0;*/
+                /*text-align: center;*/
+            }
+
+            .catalog__body {
+                margin-top: 20px;
+                /*display: grid;*/
+                grid-template-columns: 454px 454px;
+                gap: 52px;
+                /*align-items: center;*/
+            }
+                .catalog__preview {
+
+                }
+                    .catalog__illustration {
+                        /*vertical-align: top;*/
+                        margin-right: 0;
+                        width: 100%;
+                    }
+
+                .catalog__description {
+                    /*order: -1;*/
+                    /*font-weight: 500;*/
+                }
+}
 
 
 
@@ -71,8 +113,6 @@
                     margin-right: calc(-1 * var(--container-padding));
                 }
                     .catalog__illustration {
-                        width: 100%;
-                        height: auto;
                         margin: 0;
                     }
 
