--- a/src/styles/_sales.css
+++ b/src/styles/_sales.css
@@ -85,6 +85,105 @@
         }
 
 
+@media ( 1100px <= width < 1500px ) {
+
+    .sales {
+        padding-top: 60px;
+        padding-bottom: 84px;
+        /*background-image: url("../vectors/sales-background-desktop.svg");*/
+        background-size: 1499px 589px;
+        /*background-repeat: no-repeat;*/
+        background-position: center bottom -342px;
+    }
+        .sales__heading {
+            /*margin-top: 0;*/
+            /*margin-bottom: 0;*/
+            /*text-align: center;*/
+        }
+
+        .sales__description {
+            margin-top: 6px;
+            /*font-weight: 500;*/
+            /*text-align: center;*/
+        }
+
+        .sales__body {
+            margin-top: 34px;
+            /*display: flex;*/
+            /*align-items: flex-start;*/
+        }
+            .sales__content {
+                /*flex-shrink: 0;*/
+                width: 474px;
+            }
+                .sales__item {
+                    margin-top: 12px;
+                    padding: 20px 22px;
+                    /*border-radius: 18px;*/
+                    /*background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0.71) 100%);*/
+                    /* stylelint-disable */
+                    /*box-shadow: 0 12px 24px 0 rgba(20, 20, 43, 0.04),*/
+                    /*            0 -2px 4px 0 rgba(20, 20, 43, 0.02),*/
+                    /*            0 22px 24px 0 rgba(74, 58, 255, 0.03);*/
+                    /* stylelint-enable */
+                }
+
+                .sales__item:first-child {
+                    /*margin-top: 0;*/
+                }
+
+                    .sales__sub-heading {
+                        /*margin-top: 0;*/
+                        /*margin-bottom: 0;*/
+                        /*font-weight: bold;*/
+                        /*font-size: inherit;*/
+                        /*line-height: inherit;*/
+                    }
+
+                    .sales__features {
+                        /*margin-top: 16px;*/
+                        /*margin-bottom: 0;*/
+                    }
+
+            .sales__preview {
+                /*flex-shrink: 0;*/
+                width: 486px;
+            }
+                .sales__media {
+                    margin-left: -20px;
+                    margin-right: -30px;
+                    margin-top: 50px;
+                }
+
+                @media ( 1240px <= width) {
+                    .sales__media {
+                        margin-left: -40px;
+                        margin-right: -50px;
+                    }
+                }
+
+                    .sales__illustration {
+                        /*position: relative;*/
+                        /*width: 100%;*/
+                        /*height: auto;*/
+                        /*vertical-align: top;*/
+                        /*pointer-events: none;*/
+                    }
+
+            @media (min-width: 1320px) {
+                .sales__media {
+                    /*margin-right: -60px;*/
+                }
+            }
+
+            @media (min-width: 1420px) {
+                .sales__media {
+                    /*margin-right: -106px;*/
+                }
+            }
+}
+
+
 
 @media (max-width: 749px) {
 
