--- a/src/styles/_start.css
+++ b/src/styles/_start.css
@@ -38,8 +38,8 @@
 
                 .start__description {
                     margin-top: 16px;
-                    font-size: 20px;
-                    line-height: 29px;
+                    font-size: var(--base-font-size);
+                    line-height: var(--base-line-height);
                 }
 
         .start__footer {
@@ -49,10 +49,72 @@
 
         .start__rocket {
             position: absolute;
-            left: 50%;
-            margin-left: -96px;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
             top: -80px;
         }
+
+
+@media ( 1100px <= width < 1500px ) {
+
+    .start {
+        padding-top: 160px;
+        padding-bottom: 37px;
+        /*background-image: url("../vectors/start-background.svg");*/
+        background-size: 1417px 433px;
+        /*background-repeat: no-repeat;*/
+        /*background-position: center center;*/
+    }
+        .start__wrap {
+            /*position: relative;*/
+        }
+            .start__body {
+                /*display: flex;*/
+                /*align-items: flex-start;*/
+                gap: 210px;
+            }
+                .start__section {
+                    /*flex-grow: 1;*/
+                    /*flex-basis: 0;*/
+                }
+
+                .start__section:last-child {
+                    /*text-align: left;*/
+                }
+                    .start__sub-heading {
+                        /*margin-top: 0;*/
+                        /*margin-bottom: 0;*/
+                        /*display: block;*/
+                        /*font-family: var(--evolventa);*/
+                        /*font-weight: bold;*/
+                        font-size: 20px;
+                        line-height: 27px;
+                    }
+
+                    .start__description {
+                        margin-top: 6px;
+                    }
+
+                    .start__section:first-child .start__description {
+                        padding-left: 40px;
+                    }
+
+            .start__footer {
+                margin-top: 150px;
+                /*text-align: center;*/
+            }
+
+            .start__rocket {
+                /*position: absolute;*/
+                /*left: 50%;*/
+                /*margin-left: -96px;*/
+                top: -100px;
+                width: 176px;
+                height: auto;
+            }
+}
 
 
 
@@ -102,8 +164,6 @@
 
                     .start__description {
                         /*margin-top: 16px;*/
-                        font-size: 16px;
-                        line-height: 24px;
                     }
 
             .start__footer {
