--- a/src/styles/_networks.css
+++ b/src/styles/_networks.css
@@ -11,15 +11,15 @@
         }
 
         .networks__description {
-            margin-top: 6px;
+            margin-top: 9px;
             text-align: center;
             font-weight: 500;
-            font-size: 20px;
-            line-height: 34px;
+            font-size: var(--base-font-size);
+            line-height: var(--base-line-height);
         }
 
         .networks__content {
-            margin-top: 57px;
+            margin-top: 59px;
             display: flex;
             align-items: stretch;
             gap: 20px;
@@ -37,6 +37,7 @@
                 .networks__sub-heading {
                     margin-top: 0;
                     margin-bottom: 0;
+                    max-width: 340px;
                     font-family: var(--evolventa);
                     font-weight: bold;
                     font-size: 24px;
@@ -46,8 +47,8 @@
                 .networks__features {
                     margin-top: 16px;
                     margin-bottom: 0;
-                    font-size: 20px;
-                    line-height: 30px;
+                    font-size: var(--base-font-size);
+                    line-height: var(--base-line-height);
                 }
 
     .networks__stage {
@@ -61,6 +62,73 @@
                 height: auto;
                 vertical-align: top;
             }
+
+
+
+@media ( 1100px <= width < 1500px ) {
+
+    .networks {
+        padding-top: 60px;
+    }
+        .networks__body {
+            padding-bottom: 59px;
+        }
+            .networks__heading {
+                /*margin-top: 0;*/
+                /*margin-bottom: 0;*/
+                /*text-align: center;*/
+            }
+
+            .networks__description {
+                margin-top: 4px;
+                /*text-align: center;*/
+                /*font-weight: 500;*/
+            }
+
+            .networks__content {
+                margin-top: 37px;
+                /*display: flex;*/
+                /*align-items: stretch;*/
+                /*gap: 20px;*/
+            }
+                .networks__section {
+                    padding: 20px 24px;
+                    /*flex-grow: 1;*/
+                    /*flex-basis: 0;*/
+                    /*border-radius: 18px;*/
+                    /*background: linear-gradient(rgba(255, 255, 255, 0.71), #FFFFFF);*/
+                    /*box-shadow: 0 12px 24px rgba(20, 20, 43, 0.04),*/
+                    /*            0 -2px 4px rgba(20, 20, 43, 0.02),*/
+                    /*            0 22px 24px rgba(74, 58, 255, 0.03);*/
+                }
+                    .networks__sub-heading {
+                        /*margin-top: 0;*/
+                        /*margin-bottom: 0;*/
+                        max-width: 300px;
+                        /*font-family: var(--evolventa);*/
+                        /*font-weight: bold;*/
+                        font-size: 20px;
+                        line-height: 27px;
+                    }
+
+                    .networks__features {
+                        /*margin-top: 16px;*/
+                        /*margin-bottom: 0;*/
+                    }
+
+        .networks__stage {
+
+        }
+            .networks__preview {
+                text-align: center;
+            }
+                .networks__illustration {
+                    /*width: 100%;*/
+                    max-width: 960px;
+                    /*height: auto;*/
+                    /*vertical-align: top;*/
+                }
+}
 
 
 
@@ -79,7 +147,7 @@
             }
 
             .networks__description {
-                margin-top: 14px;
+                margin-top: 10px;
                 /*text-align: center;*/
             }
 
@@ -116,8 +184,6 @@
                     .networks__features {
                         /*margin-top: 16px;*/
                         /*margin-bottom: 0;*/
-                        font-size: 16px;
-                        line-height: 24px;
                     }
 
         .networks__stage {
